Mon Apr  6 18:18:58 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/Name_Utilities.cpp:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:

          Stab at a fix for a memory corruption during deployment. 
        
Mon Apr  6 13:26:08 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:

          Fixed compile error.

Sun Apr  5 20:34:22 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/NodeManager-Deployments/nm_launcher.mpc:

          Changed parent from ciao_logger to dance_logger.

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:

          Properly check if _var is nil.

Sat Apr  4 15:30:13 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:
          Fix fuzz errors.

Sat Apr  4 03:39:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:
        * ciao/ComponentServer/CIAO_Container_Impl.cpp:

          Fixed a couple memory management issues.

Mon Mar 23 12:51:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Logger/File_Logger_Backend.h
        * ciao/Logger/Logger_Service.cpp
        * ciao/Logger/Logger_Service.h
        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp
        * DAnCE/tests/ObjectLocatorTest/srv_main.cpp
        * DAnCE/tests/RedirectionServiceTest/srv_main.cpp
        * tests/CIAO_ComponentServer/Basic/client.cpp
        * tests/CIAO_ComponentServer/SimpleComponent/client.cpp
          Fixed unicode compile problems

Fri Mar 20 19:00:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DomainApplicationManager/Node_Locator.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp
        * DAnCE/tests/NameServiceTest/srv_main.cpp
        * performance-tests/Benchmark/RoundTrip/client.cpp