@@ -1,10 +1,16 @@
+Tue Apr  7 14:37:18 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/tests/CIAO/NodeManager-Deployments/simple_nm_launcher.cpp:
+
+          Compile error. 
+        
 Mon Apr  6 18:18:58 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/NodeApplication/Name_Utilities.cpp:
         * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
 
-          Stab at a fix for a memory corruption during deployment. 
-        
+          Stab at a fix for a memory corruption during deployment.
+
 Mon Apr  6 13:26:08 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:
